# rover-controller

./: .gitignore  README.md  rover_setup.sh
rover-control/src/motor_ctrl/: package.xml  setup.py
rover-control/src/motor_ctrl/motor_ctrl/: keyboard_input.py  motor.py  smoothcontroller.py  startstopcontroller.py
rover-control/src/motor_interfaces/: CMakeLists.txt  package.xml
rover-control/src/motor_interfaces/action/: DriveToLocation.action  MissionAction.action  WaypointService.action
rover-control/src/motor_interfaces/msg/: GPS.msg  MotorState.msg  Mov.msg  UTM.msg  Waypoint.msg  WaypointData.msg
rover-control/src/navigation/: package.xml  setup.py
rover-control/src/navigation/navigation/: gps.py  localization.py  mission_control.py  navigator.py  trip_planner.py
rover-control/src/navigation/navigation/config/: nav_params.yaml
rover-control/src/navigation/navigation/launch/: fullsystem.launch.py  nomotor.launch.py
rover-control/src/navigation/navigation/utility/: JSON_parser.py  Kalman.py  gps_checker.py  regression.py  route_logger.py  vehicle_model.py
rover-control/src/rover_utils/: package.xml  setup.cfg  setup.py
rover-control/src/rover_utils/rover_utils/: globaltime.py  ultrasonic.py  waypoint_service.py
rover-control/utils/: kalman_demo.py  kalman_test.py  route_visualizer.py
