<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>motor_ctrl</name>
    <version>0.0.1</version>
    <description>TPackage for controlling the Motor via GPIO</description>
    <maintainer email="robin.muenk@tum.de">Robin Münk</maintainer>
    <license>License declaration</license>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <exec_depend>motor_interfaces</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
